--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
     compile 'com.android.support:palette-v7:24.2.1'
-    compile project(':lib')
+    compile project(':finance')
+    compile project(':person')
     compile project(':carbon')
 }
