--- a/finance/build.gradle
+++ b/finance/build.gradle
@@ -18,11 +18,11 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-compile 'com.android.support:support-annotations:25.3.1'
+    compile project(path: ':lib')
 }
