--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "25.0.3"
 
     dataBinding {
         enabled = true
@@ -11,7 +10,7 @@ android {
     defaultConfig {
         applicationId "tk.zielony.randomdatagenerator"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,15 +28,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'de.greenrobot:androidsvg:1.2.2-beta-1-tweaked-2'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0'
-    compile 'com.android.support:palette-v7:24.2.1'
-    compile project(':finance')
-    compile project(':person')
-    compile project(':carbon')
+    implementation 'com.android.support:support-v4:25.4.0'
+    implementation 'com.android.support:gridlayout-v7:25.4.0'
+    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    implementation 'de.greenrobot:androidsvg:1.2.2-beta-1-tweaked-2'
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:palette-v7:25.4.0'
+    implementation 'com.annimon:stream:1.1.7'
+    implementation project(':finance')
+    implementation project(':person')
+    implementation project(':carbon')
 }
