--- a/carbon/build.gradle
+++ b/carbon/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('carbon-release.aar'))
+artifacts.add("default", file('carbon.aar'))
