--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     dataBinding {
         enabled = true
@@ -28,15 +28,16 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:25.4.0'
-    implementation 'com.android.support:gridlayout-v7:25.4.0'
-    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:gridlayout-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'de.greenrobot:androidsvg:1.2.2-beta-1-tweaked-2'
-    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:palette-v7:25.4.0'
-    implementation 'com.annimon:stream:1.1.7'
+    implementation 'com.android.support:palette-v7:26.1.0'
+    implementation 'com.annimon:stream:1.1.8'
     implementation project(':finance')
     implementation project(':person')
     implementation project(':carbon')
+    implementation project(':lib')
 }
