--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 14
@@ -23,5 +23,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-annotations:25.4.0'
+    implementation 'com.android.support:support-annotations:27.0.1'
 }
