--- a/person/build.gradle
+++ b/person/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 14
@@ -23,5 +23,5 @@ android {
 }
 
 dependencies {
-    compile project(path: ':lib')
+    implementation project(path: ':lib')
 }
