--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -24,4 +24,5 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-annotations:27.0.1'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 }
