--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     dataBinding {
         enabled = true
@@ -9,10 +9,10 @@ android {
     defaultConfig {
         applicationId "tk.zielony.randomdatagenerator"
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -27,16 +27,16 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:gridlayout-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
+
     implementation 'de.greenrobot:androidsvg:1.2.2-beta-1-tweaked-2'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:palette-v7:28.0.0'
-    implementation 'com.annimon:stream:1.1.9'
+    implementation 'com.annimon:stream:1.2.1'
+
+    implementation 'com.github.zieiony.carbon:carbon:87415e58f8'
+
     implementation project(':finance')
     implementation project(':person')
-    implementation project(':carbon')
     implementation project(':lib')
 }
